suite nettoyage code et remplacement Restemplate par Feign